[package]
name = "supervisor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.130"
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
argon2 = "0.3.1"
rand_core = { version = "0.6.3", features = ["std"] }
